tests/type-error/Patterns-TooFewArgs.vix
type List a = Nil | Cons a (Ptr (List a))

f (Cons z) = 0
